<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!-- Toolbar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/retour"
            android:padding="12dp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:gravity="center" />

        <ImageButton
            android:id="@+id/btn_supp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_supp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/supprimer"
            android:padding="12dp"/>

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/modifier"
            android:padding="12dp" />

    </LinearLayout>

    <!-- Contenu principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="72dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_horizontal">

        <!-- Carte avec le code-barres -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:gravity="center">

                <!-- Barcode -->
                <ImageView
                    android:id="@+id/iv_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/code_barre" />

                <TextView
                    android:id="@+id/tv_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textAlignment="center"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Description -->
        <LinearLayout
            android:id="@+id/ll_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?attr/colorSurfaceVariant"
            android:backgroundTint="@null"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            android:visibility="visible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />
        </LinearLayout>



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
